--- a/profile/index.html
+++ b/profile/index.html
@@ -196,11 +196,11 @@
                           />
                       </div>
                       <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
-                      <div id="imageFieldsContainer">
+                      <div id="mediaGallery">
                         <div class="auctionMedia">
                           <input
                             type="text"
-                            class="form-control"
+                            class=" form-control"
                             name="media"
                             placeholder="Add Image"
                             required
@@ -228,7 +228,7 @@
                                 id="editAuctionButton"
                                 class="btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
                             >
-                                Edit
+                                Save
                             </button>
                   </form>
               </div>
