added a remove image field button

--- a/profile/index.html
+++ b/profile/index.html
@@ -196,7 +196,7 @@
                           />
                       </div>
                       <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
-                      <div id="imageFieldsContainer">
+                      <div id="mediaGallery">
                         <div class="auctionMedia">
                           <input
                             type="text"
@@ -212,7 +212,14 @@
                         id="addImageButton"
                         class="btn btn-secondary mt-2"
                       >
-                        Add Image
+                      <i class="fa-solid fa-plus"></i>
+                      </button>
+                      <button
+                        type="button"
+                        id="removeImageButton"
+                        class="btn btn-secondary mt-2"
+                      >
+                      <i class="fa-solid fa-minus"></i>
                       </button>
                       <div class="modal-footer justify-content-around mt-2">
                           <button
