--- a/profile/index.html
+++ b/profile/index.html
@@ -141,15 +141,9 @@
     <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal">
       <div class="modal-dialog ">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
-              <div class="modal-header" id="modal-header">
+            <div class="modal-header" id="createAuctionModal-header">
                   <h4 class="modal-title">Create New Auction</h4>
-                  <button
-                      type="button"
-                      class="btn-close"
-                      id="btn-close"
-                      data-bs-dismiss="modal"
-                      aria-label="Close"
-                  ></button>
+                  <button type="button" class="btn-close" id="createAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                   <form id="createNewAuctionForm">
@@ -164,7 +158,6 @@
                               required
                           />
                       </div>
-                    <div id="errorMessage" class="text-danger mt-2 fs-4"></div>
                       <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
                       <textarea
                           class="form-control mt-1 mb-3"
@@ -209,15 +202,13 @@
                       </div>
                       <button
                         type="button"
-                        id="addImageButton"
-                        class="btn btn-secondary mt-2"
+                        class=" addImageButton btn btn-secondary mt-2"
                       >
                       <i class="fa-solid fa-plus"></i>
                       </button>
                       <button
                         type="button"
-                        id="removeImageButton"
-                        class="btn btn-secondary mt-2"
+                        class=" removeImageButton btn btn-secondary mt-2"
                       >
                       <i class="fa-solid fa-minus"></i>
                       </button>
@@ -230,18 +221,98 @@
                               Create Auction
                           </button>
                         </button>
-                            <button
-                                type="submit"
-                                id="editAuctionButton"
-                                class="btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
-                            >
-                                Edit
-                            </button>
                   </form>
               </div>
           </div>
       </div>
   </div>  
+  <div class="modal fade modal-lg bg-dark bg-opacity-50" id="editAuctionModal">
+    <div class="modal-dialog ">
+        <div class="modal-content border border-3 border-secondary bg-info text-white">
+          <div class="modal-header" id="editAuctionModal-header">
+                <h4 class="modal-title">Edit Auction</h4>
+                <button type="button" class="btn-close" id="createAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="editAuctionForm">
+                    <label for="editAuctionTitle" class="form-label text-start">Title</label>
+                    <div class="auctionTitle">
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="editAuctionTitle"
+                            name="title"
+                            placeholder="Change Title"
+                            required
+                        />
+                    </div>
+                    <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
+                <div class="editAuctionBody">
+                    <textarea
+                        class="form-control mt-1 mb-3"
+                        placeholder="Add description"
+                        id="editAuctionBody"
+                        type="text"
+                        name="body"
+                        required
+                        rows="3"
+                    ></textarea>
+                    </div>
+                    <label for="editAuctionTags" class="form-label text-start mt-2">Tags</label>
+                    <div class="auctionTags">
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="editAuctionTags"
+                            name="tags"
+                            placeholder="Add Tags, use comma between tags"
+                        />
+                    </div>
+                    <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
+                    <div id="editMediaGallery">
+                      <div class="auctionMedia">
+                        <input
+                          type="text"
+                          class="form-control"
+                          name="media"
+                          placeholder="Add Image"
+                          required
+                        />
+                      </div>
+                    </div>
+                    <button
+                      type="button"
+                      class="addImageButton btn btn-secondary mt-2"
+                    >
+                    <i class="fa-solid fa-plus"></i>
+                    </button>
+                    <button
+                      type="button"
+                      class=" removeImageButton btn btn-secondary mt-2"
+                    >
+                    <i class="fa-solid fa-minus"></i>
+                    </button>
+                    <div class="modal-footer justify-content-around mt-2">
+                        <button
+                            type="submit"
+                            id="editAuctionButton"
+                            class="btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
+                        >
+                            Save
+                        </button>
+                      </button>
+                          <button
+                              type="submit"
+                              id="deleteAuctionButton"
+                              class="btn btn-danger border border-primary btn-lg mt-2 ml-auto"
+                          >
+                              Delete
+                          </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>  
   </main>
 </body>
 <footer class="container-fluid bg-success bg-opacity-25 mt-1">
