--- a/profile/index.html
+++ b/profile/index.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module"></script>
+    <!-- <script src="/js/utilities/utilities.mjs" type="module"></script> -->
    <script src="/js/api/auth/logout.mjs" type="module"></script>
    <script src="/js/api/profile/profileInfo.mjs" type="module"></script>
    <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-      <div class="modal fade bg-dark bg-opacity-50  modal-fullscreen-sm-down" id="editModal" tabindex="-1" aria-labelledby="editModal" aria-hidden="true">
+      <div class="modal fade bg-dark bg-opacity-50  modal-fullscreen-sm-down" id="editAvatarModal" tabindex="-1" aria-labelledby="editModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
             <div class="modal-header">
@@ -138,7 +138,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal">
+    <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal" tabindex="-1" aria-labelledby="createAuctionModal" aria-hidden="true">
       <div class="modal-dialog ">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
             <div class="modal-header" id="createAuctionModal-header">
@@ -226,12 +226,12 @@
           </div>
       </div>
   </div>  
-  <div class="modal fade modal-lg bg-dark bg-opacity-50" id="editAuctionModal">
+  <div class="modal fade modal-lg bg-dark bg-opacity-50" id="editAuctionModal" tabindex="-1" aria-labelledby="editAuctionModal" aria-hidden="true">
     <div class="modal-dialog ">
         <div class="modal-content border border-3 border-secondary bg-info text-white">
           <div class="modal-header" id="editAuctionModal-header">
                 <h4 class="modal-title">Edit Auction</h4>
-                <button type="button" class="btn-close" id="createAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" id="editAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="editAuctionForm">
@@ -259,7 +259,7 @@
                     ></textarea>
                     </div>
                     <label for="editAuctionTags" class="form-label text-start mt-2">Tags</label>
-                    <div class="auctionTags">
+                    <div class="editAuctionTags">
                         <input
                             type="text"
                             class="form-control"
@@ -268,9 +268,9 @@
                             placeholder="Add Tags, use comma between tags"
                         />
                     </div>
-                    <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
+                    <label for="editAuctionMedia" class="form-label text-start mt-2">Image URL:</label>
                     <div id="editMediaGallery">
-                      <div class="auctionMedia">
+                      <div class="editAuctionMedia">
                         <input
                           type="text"
                           class="form-control"
@@ -282,12 +282,14 @@
                     </div>
                     <button
                       type="button"
+                      id="editAddImageButton"
                       class="addImageButton btn btn-secondary mt-2"
                     >
                     <i class="fa-solid fa-plus"></i>
                     </button>
                     <button
                       type="button"
+                      id="editRemoveImageButton"
                       class=" removeImageButton btn btn-secondary mt-2"
                     >
                     <i class="fa-solid fa-minus"></i>
