--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -55,7 +55,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-secondary text-decoration-underline" href="/feed/listings.html">Auctions</a>
+                <a class="nav-link text-secondary" href="/feed/auctions.html">Auctions</a>
               </li>
               <li class="nav-item">
                 <a id="logoutButton" class="nav-link text-secondary" href="index.html">Logout</a>
