fixing functions withj timeouts

--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -22,7 +22,7 @@
   </head>
 </html>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+  <header class="navbar navbar-expand-lg sticky-top p-0">
         <div class="container bg-primary">
           <a
             href="/index.html"
