--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
     <script src="/js/api/auth/register.mjs" type="module"></script>
   </head>
   <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+    <header class="navbar navbar-expand-lg sticky-top p-0">
       <div class="container bg-primary">
         <a
           href="/index.html"
