--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -23,7 +23,7 @@
   </head>
 </html>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+  <header class="navbar navbar-expand-lg sticky-top p-0">
         <div class="container bg-primary">
           <a
             href="/index.html"
@@ -56,7 +56,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-secondary text-decoration-underline" href="/feed/listings.html">Auctions</a>
+                <a class="nav-link text-secondary text-decoration-underline fw-bold" href="/feed/listings.html">Auctions</a>
               </li>
               <li class="nav-item">
                 <a id="logoutButton" class="nav-link text-secondary" href="index.html">Logout</a>
