--- a/profile/index.html
+++ b/profile/index.html
@@ -25,7 +25,7 @@
    <script src="/js/auctions/deleteAuction.mjs" type="module" defer></script>
   </head>
 <body>
-  <header class="navbar navbar-expand-lg sticky-top">
+  <header class="navbar navbar-expand-lg sticky-top p-0">
     <div class="container bg-primary">
       <a
         href="/index.html"
@@ -52,13 +52,13 @@
         <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
           <li class="nav-item">
             <a
-              class="nav-link text-secondary text-decoration-underline"
+              class="nav-link text-secondary text-decoration-underline fw-bold"
               href="/profile/index.html"
               >Profile</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="/feed/index.html">Auctions</a>
+            <a class="nav-link text-secondary" href="/feed/auctions.html">Auctions</a>
           </li>
           <li class="nav-item">
             <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Logout</a>
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-      <div class="modal fade bg-dark bg-opacity-50  modal-fullscreen-sm-down" id="editAvatarModal" tabindex="-1" aria-labelledby="editModal" aria-hidden="true">
+      <div class="modal fade bg-dark bg-opacity-50  modal-fullscreen-sm-down" id="editAvatarModal" tabindex="-1" aria-labelledby="editAvatarModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
             <div class="modal-header">
@@ -126,7 +126,7 @@
                 <div class="modal-footer justify-content-around mt-2">
                   <button
                     type="submit"
-                    id="editProfileMedia"
+                    id="editProfileMediaButton"
                     class="btn btn-info btn-lg mt-2 ml-auto btn-dark"
                   >
                     Update
