--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -18,7 +18,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/api/auth/logout.mjs" type="module"></script>
+    <script src="/js/auth/logout.mjs" type="module"></script>
   </head>
 </html>
 <body>
@@ -68,7 +68,7 @@
         <div class="container loggedInBox">
         </div>
         <div class="auctionBox">
-          
+
         </div>
       </main> 
       <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal" tabindex="-1" aria-labelledby="createAuctionModal" aria-hidden="true">
