--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         Register
                         <a href="/register.html" class="text-info fs-1 text-decoration-underline">Here</a>
                         or continue as
-                        <a href="/feed/index.html" class="text-info fs-1 text-decoration-underline">Guest</a>
+                        <a href="/feed/auctions.html" class="text-info fs-1 text-decoration-underline">Guest</a>
                     </p>
                 </div> 
             </div>
