--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/api/auth/register.mjs" type="module"></script>
+    <script src="/js/auth/register.mjs" type="module"></script>
   </head>
   <body>
     <header class="navbar navbar-expand-lg sticky-top p-0">
@@ -68,7 +68,7 @@
       </div>
     </header>
     <main>
-      <h1 class="text-center p-3">Register</h1>
+      <h1 class="text-center p-5">Register</h1>
       <div class="container-fluid text-center">
         <div class="row justify-content-center align-items-center gap-5">
           <div class="col-md-4">
