--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-decoration-underline active"
+                class="nav-link text-secondary "
                 href="about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="contact.html">Contact</a>
+              <a class="nav-link text-secondary text-decoration-underline active" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
