--- a/register.html
+++ b/register.html
@@ -54,9 +54,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary fw-lighter" href="/about.html"
-                >About</a
-              >
+              <a class="nav-link text-secondary" href="/about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-secondary" href="/contact.html"
