working on feed

--- a/profile/index.html
+++ b/profile/index.html
@@ -155,6 +155,7 @@
                               id="auctionTitle"
                               name="title"
                               placeholder="Change Title"
+                              maxlength="25"
                               required
                           />
                       </div>
