--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -17,9 +17,10 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/auth/logout.mjs" type="module"></script>
-    <script src="/js/auctions/allAuctions.mjs" type="module"></script>
+    <script src="/js/utilities/utilities.mjs" type="module" defer></script>
+    <script src="/js/auth/logout.mjs" type="module" defer></script>
+    <script src="/js/auctions/allAuctions.mjs" type="module" defer></script>
+    <script src="/js/feed/fecthProfile.mjs" type="module" defer></script>
   </head>
 </html>
 <body>
@@ -65,7 +66,11 @@
           </div>
         </div>
       </header>
-      <main></main>
+      <main>
+        <h1 class="text-center p-5 visually-hidden">All Auctions</h1>
+        <div class="container loggedInBox text-center p-3 bg-success bg-opacity-25 "></div>
+          <div class="allAuctions"></div>
+      </main>
     </body>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
         <div class="row align-items-center">
