--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -19,8 +19,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module" defer></script>
     <script src="/js/auth/logout.mjs" type="module" defer></script>
-    <script src="/js/auctions/allAuctions.mjs" type="module" defer></script>
-    <script src="/js/feed/fecthProfile.mjs" type="module" defer></script>
+    <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
+    <script src="/js/feed/fetchAllAuctions.mjs" type="module" defer></script>
+    <script src="/js/feed/fetchLoggedInUser.mjs" type="module" defer></script>
+    <script src="/js/feed/searchAndFilter.mjs" type="module" defer></script>
   </head>
 </html>
 <body>
@@ -68,8 +70,131 @@
       </header>
       <main>
         <h1 class="text-center p-5 visually-hidden">All Auctions</h1>
-        <div class="container loggedInBox text-center p-3 bg-success bg-opacity-25 "></div>
-          <div class="allAuctions"></div>
+        <div class="container loggedInBox  text-center p-3 bg-success bg-opacity-25 fs-3 text-danger border border-secondary border">
+          You need to log in to bid on auctions!
+          <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
+            <div class="spinner-border" role="status"></div>
+          </div>
+        </div>
+        <div class="container p-3">
+          <h2 class="text-center p-3 fs-1">Auctions</h2>
+          <div class=" justify-content-between align-items-center d-flex flex-column flex-sm-row ">
+          <form class="col-md-6 border border-secondary border-5 border-top-0 border-end-0 border-start-0">
+            <input
+              id="searchBar"
+              class="form-control p-2 custom-input shadow-none fw-bold fs-3 border-0 text-primary"
+              type="search"
+              placeholder="Search..."
+              aria-label="search"
+            />
+          </form>
+          <div class="dropdown col-md-4 mt-lg-3 mt-3 flex-end ">
+            <button type="button" class="btn btn-lg btn-primary border border-secondary text-white dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              Filter by
+            </button>
+            <ul class="dropdown-menu">
+              <li class="dropdown-item">Price</li>
+              <li class="dropdown-item">Auction Created</li>
+              <li class="dropdown-item">Auction Ending</li>
+            </ul>
+          </div>
+        </div>
+        <div class="allAuctions d-flex flex-wrap justify-content-evenly">
+        </div>
+        
+            <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
+              <div class="spinner-border" role="status"></div>
+            </div>
+          </div>
+          <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal" tabindex="-1" aria-labelledby="createAuctionModal" aria-hidden="true">
+            <div class="modal-dialog ">
+                <div class="modal-content border border-3 border-secondary bg-info text-white">
+                  <div class="modal-header" id="createAuctionModal-header">
+                        <h4 class="modal-title">Create New Auction</h4>
+                        <button type="button" class="btn-close" id="createAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="createNewAuctionForm">
+                            <label for="auctionTitle" class="form-label text-start">Title</label>
+                            <div class="auctionTitle">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="auctionTitle"
+                                    name="title"
+                                    placeholder="Change Title"
+                                    maxlength="25"
+                                    required
+                                />
+                            </div>
+                            <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
+                            <textarea
+                                class="form-control mt-1 mb-3"
+                                placeholder="Add description"
+                                id="auctionBody"
+                                type="text"
+                                name="body"
+                                required
+                                rows="3"
+                            ></textarea>
+                            <label for="auctionEndsAt" class=" form-label text-start mt-2">Ends At:</label>
+                            <div class="auctionEndsAt">
+                                <input
+                                    type="datetime-local"
+                                    class="form-control"
+                                    id="auctionEndsAt"
+                                    name="endsAt"
+                                    required
+                                />
+                            </div>
+                            <label for="auctionTags" class="form-label text-start mt-2">Tags</label>
+                            <div class="auctionTags">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="auctionTags"
+                                    name="tags"
+                                    placeholder="Add Tags, use comma between tags"
+                                />
+                            </div>
+                            <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
+                            <div id="mediaGallery">
+                              <div class="auctionMedia">
+                                <input
+                                  type="text"
+                                  class="form-control"
+                                  name="media"
+                                  placeholder="Add Image"
+                                  required
+                                />
+                              </div>
+                            </div>
+                            <button
+                              type="button"
+                              class=" addImageButton btn btn-secondary mt-2"
+                            >
+                            <i class="fa-solid fa-plus"></i>
+                            </button>
+                            <button
+                              type="button"
+                              class=" removeImageButton btn btn-secondary mt-2"
+                            >
+                            <i class="fa-solid fa-minus"></i>
+                            </button>
+                            <div class="modal-footer justify-content-around mt-2">
+                                <button
+                                    type="submit"
+                                    id="createAuctionButton"
+                                    class=" mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
+                                >
+                                    Create Auction
+                                </button>
+                              </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>  
       </main>
     </body>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
