--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -50,7 +50,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
+            <ul class="navbar-nav ms-auto me-1-sm float-end fs-5" id="profileNavText">
               <li class="nav-item">
                 <a
                   class="nav-link text-secondary"
