--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -20,6 +20,7 @@
     <script src="/js/utilities/utilities.mjs" type="module"></script>
     <script src="/js/auth/logout.mjs" type="module" defer></script>
     <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
+    <script src="/js/auctions/bidOnAuction.mjs" type="module" defer></script>
     <script src="/js/feed/fetchLoggedInUser.mjs" type="module" defer></script>
     <script src="/js/feed/fetchSingleAuction.mjs" type="module" defer></script>
   </head>
@@ -68,6 +69,7 @@
         </div>
       </header>
       <main>
+        <h1 class="visually-hidden">Specific Auction</h1>
         <div class="container loggedInBox  text-center p-3 bg-success bg-opacity-25 fs-3 text-danger border border-secondary border">
           You need to log in to bid on auctions!
           <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
@@ -166,6 +168,39 @@
           </div>
       </div> 
     </div>
+    <div class="modal fade modal-md bg-dark bg-opacity-50 " id="bidOnAuctionModal" tabindex="-1" aria-labelledby="bidOnAuctionModal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content border border-3 border-secondary bg-info text-white">
+            <div class="modal-header" id="bidOnAuctionModal-header">
+                  <h4 class="modal-title">Bid On Auction</h4>
+                  <button type="button" class="btn-close" id="bidOnAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                    <form id="bidOnAuctionForm">
+                    <label for="amount" class="form-label text-danger bg-primary p-2 rounded fs-6">NB! All bids are binding</label>
+                      <div class="amount">
+                        <input
+                            type="number"
+                            class="form-control fs-3"
+                            id="amount"
+                            name="amount"
+                            placeholder="Place Bid"
+                            required
+                        />
+                      </div>
+                      <div id="errorMessage" class="text-danger mt-2 fs-4"></div>
+                      <button
+                          type="submit"
+                          id="createBidButton"
+                          class="btn btn-secondary border border-primary btn-md mt-2"
+                      >
+                          Bid Now
+                      </button>
+                    </form>
+                  </div>
+              </div>
+          </div> 
+        </div>
       </main>  
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
       <div class="row align-items-center">
