--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -172,7 +172,7 @@
       <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
             <div class="modal-header" id="bidOnAuctionModal-header">
-                  <h4 class="modal-title">Bid On Auction</h4>
+                  <h4 class="modal-title">New Bid</h4>
                   <button type="button" class="btn-close" id="bidOnAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
