--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <a href="#">
+                    <a href="/feed/auctions.html">
                         <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="Image of a luxurious watch">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
@@ -77,14 +77,14 @@
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <a href="#">
+                    <a href="/feed/auctions.html">
                         <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                         <h2 class="text-white bg-primary bg-opacity-50">Men</h2>
                     </div>
                     </div>
-                    <a href="#">
+                    <a href="/feed/auctions.html">
                     <div class="carousel-item">
                     <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
                 </a>
