--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         <div class="about-bg">
           <div class="container col-md-6 mt-5 bg-success bg-opacity-75 p-4">
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
             >
               Welcome to Vintage Brokers, your exclusive gateway to the world of
               refined luxury.
