changed text to primary

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
               Welcome to Vintage Brokers, your exclusive gateway to the world of
               refined luxury.
             </h2>
-            <p class="fs-5 text-white mt-3">
+            <p class="fs-5 text-primary mt-3">
               Our esteemed platform is dedicated to curating an extraordinary
               collection of opulent items, ranging from timeless watches to
               sumptuous clothing and regal furniture. Each piece we present
@@ -83,11 +83,11 @@
               style.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
             >
               Elegance Unveiled
             </h2>
-            <p class="fs-5 text-white mt-3">
+            <p class="fs-5 text-primary mt-3">
               Embark on a journey through our curated watch collection, a
               symphony of precision and sophistication. Picture yourself adorned
               with a vintage Rolex, echoing tales of exploration, or savor the
@@ -96,11 +96,11 @@
               treasures that encapsulate the essence of a bygone era.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
             >
               An Odyssey Through Time
             </h2>
-            <p class="fs-5 text-white mt-3">
+            <p class="fs-5 text-primary mt-3">
               Step into the world of fashion with our curated offerings that
               transcend time. Envision yourself draped in the opulence of a
               Chanel gown from the roaring twenties or clad in the sleek lines
@@ -109,11 +109,11 @@
               the fabric of history.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
             >
               Timeless Allure
             </h2>
-            <p class="fs-5 text-white mt-3">
+            <p class="fs-5 text-primary mt-3">
               Explore our virtual gallery of furniture, where timeless design
               takes center stage. From ornate Victorian chairs to mid-century
               modern masterpieces, each item narrates a unique story of
@@ -122,11 +122,11 @@
               statement of refined taste.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+              class="col-md-10 mx-auto mb-1 text-primary text-white fs-1 border-bottom border-4 border-secondary"
             >
               Bid with Distinction
             </h2>
-            <p class="fs-5 text-white mt-3">
+            <p class="fs-5 text-primary mt-3">
               Vintage Brokers invites you to partake in an experience that
               transcends the ordinary. Secure your place at the auction, where
               enthusiasts converge to bid on the extraordinary. Every lot
