--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
               statement of refined taste.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-primary text-white fs-1 border-bottom border-4 border-secondary"
+              class="col-md-10 mx-auto mb-1 text-primary fs-1 border-bottom border-4 border-secondary"
             >
               Bid with Distinction
             </h2>
