--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,11 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
             <li class="nav-item">
+              <a class="nav-link text-secondary" href="/feed/auctions.html"
+                >Auctions</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html"
                 >Register</a
               >
