--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -50,8 +50,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto me-1-sm float-end fs-5" id="profileNavText">
-              <li class="nav-item">
+            <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
+              <li class="nav-item" id="profileNavText">
                 <a
                   class="nav-link text-secondary"
                   href="/profile/index.html"
@@ -62,7 +62,7 @@
                 <a class="nav-link text-secondary text-decoration-underline fw-bold" href="/feed/listings.html">Auctions</a>
               </li>
               <li class="nav-item">
-                <a id="logoutButton" class="nav-link text-secondary" href="index.html">Logout</a>
+                <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Login</a>
               </li>
             </ul>
           </div>
