--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -59,7 +59,14 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-secondary text-decoration-underline fw-bold" href="/feed/listings.html">Auctions</a>
+                <a class="nav-link text-secondary text-decoration-underline fw-bold active" href="/feed/listings.html">Auctions</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-secondary"
+                  href="/register.html"
+                  >Register</a
+                >
               </li>
               <li class="nav-item">
                 <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Login</a>
