--- a/about.html
+++ b/about.html
@@ -65,6 +65,14 @@
             <li class="nav-item">
               <a class="nav-link text-secondary" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a
+                id="logoutButton"
+                class="nav-link text-secondary"
+                href="/index.html"
+                >Login</a
+              >
+            </li>
           </ul>
         </div>
       </div>
