--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,9 @@
             <li class="nav-item">
               <a class="nav-link text-secondary text-decoration-underline active" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Login</a>
+            </li>
           </ul>
         </div>
       </div>
