--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -69,6 +69,16 @@
                 >
               </li>
               <li class="nav-item">
+                <a
+                  class="nav-link text-secondary "
+                  href="about.html"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-secondary" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
                 <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Login</a>
               </li>
             </ul>
