--- a/register.html
+++ b/register.html
@@ -66,6 +66,14 @@
                 >Contact</a
               >
             </li>
+            <li class="nav-item">
+              <a
+                id="logoutButton"
+                class="nav-link text-secondary"
+                href="/index.html"
+                >Login</a
+              >
+            </li>
           </ul>
         </div>
       </div>
