--- a/contact.html
+++ b/contact.html
@@ -75,8 +75,8 @@
     <main>
       <div class="container-fluid text-center">
         <div class="contact-bg">
-          <div class="container col-md-6 bg-success bg-opacity-75 p-4 text-white align-items-center">
-            <h1 class="text-center fs-1 border-bottom border-4 border-secondary">Contact</h1>
+          <div class="container col-md-6 bg-success bg-opacity-75 p-4 text-primary align-items-center">
+            <h1 class="text-center fs-1 border-bottom border-4 border-secondary mt-5 ">Contact</h1>
             <p class="fs-4"> Customer Support</p>
             <div class="col-md-4 d-flex flex-row gap-2 align-items-center">
                 <p class="fs-3">Phone</p>
@@ -84,8 +84,8 @@
                 <p class="fs-3 col-md-10 ms-2">+47 815 412 00</p>
             </div>
             <div class="col-md-4 d-flex flex-row gap-2 align-items-center">
-                <p class="fs-3">Email</p>
-                <i class="fa-solid fa-envelope text-secondary fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
+                <p class="fs-3 ">Email</p>
+                <i class="fa-solid fa-envelope text-secondary  fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
                 <p class="fs-3 col-md-10 ms-5">VintageBrokers@support.com</p>
             </div>
           </div>
