--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/auth/login.mjs" type="module"></script>
+    <script src="/js/utilities/utilities.mjs" type="module" defer></script>
+    <script src="/js/auth/login.mjs" type="module" defer></script>
   </head>
 </html>
 <body>
@@ -64,7 +64,7 @@
       </div>
     </header>
     <main >
-        <h1 class=" text-center p-3">Embrace The Extraordinary</h1>
+        <h1 class=" text-center p-3 brand-name">Embrace The Extraordinary</h1>
         <div id="carouselExampleCaptions" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
             <div id="myCustomCarousel" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
                 <div class="carousel-indicators">
