--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -18,7 +18,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module" defer></script>
-    <script src="/js/auth/logout.mjs" type="module" defer></script>
+    <script src="/js/auth/logout.mjs" type="module" ></script>
     <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
     <script src="/js/feed/fetchAllAuctions.mjs" type="module" defer></script>
     <script src="/js/feed/fetchLoggedInUser.mjs" type="module" defer></script>
