--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -88,7 +88,9 @@
               aria-label="search"
             />
           </form>
-            <select class="sortAuctions" name="filter" id="sortAuctions">
+          <label for="sortAuctions" class="
+          visually-hidden ">Sort Auctions</label>
+            <select class="sortAuctions" name="sortAuctions" id="sortAuctions">
               <option value="">Sort by:</option>
               <option value="priceHtoL">Price: High - low</option>
               <option value="priceLtoH">Price: Low - High</option>
