--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -70,7 +70,7 @@
       </header>
       <main>
         <h1 class="visually-hidden">Specific Auction</h1>
-        <div class="container loggedInBox  text-center p-3 bg-success bg-opacity-25 fs-3 text-danger border border-secondary border">
+        <div class="container loggedInBox profileBanner  text-center p-3 bg-success bg-opacity-25 fs-3 text-danger border border-secondary border">
           You need to log in to bid on auctions!
           <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
             <div class="spinner-border" role="status"></div>
