--- a/profile/index.html
+++ b/profile/index.html
@@ -97,10 +97,10 @@
               <div class="profileAuctions  d-flex flex-wrap justify-content-evenly align-items-center"></div>
             </div>
             <div class="tab-pane fade" id="pills-bids" role="tabpanel" aria-labelledby="bids-tab" tabindex="0">
-              <div class="profileBids d-flex flex-wrap"></div>
+              <div class="profileBids d-flex flex-wrap justify-content-evenly align-items-center"></div>
             </div>
             <div class="tab-pane fade" id="pills-won" role="tabpanel" aria-labelledby="won-tab" tabindex="0">
-              <div class="profileWins d-flex flex-wrap"></div>
+              <div class="profileWins d-flex flex-wrap justify-content-evenly align-items-center"></div>
             </div>
           </div>
         </div>
