--- a/about.html
+++ b/about.html
@@ -51,6 +51,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link text-secondary" href="/index.html">Login</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html"
                 >Register</a
               >
@@ -65,25 +68,17 @@
             <li class="nav-item">
               <a class="nav-link text-secondary" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-              <a
-                id="logoutButton"
-                class="nav-link text-secondary"
-                href="/index.html"
-                >Login</a
-              >
-            </li>
           </ul>
         </div>
       </div>
     </header>
     <main>
       <h1 class="visually-hidden">About Us</h1>
-      <div class="container-fluid text-center">
-        <div class="about-bg">
-          <div class="container col-md-6 mt-5 bg-success bg-opacity-75 p-4">
+      <div class="container-fluid">
+        <div class="about-bg bg-success bg-opacity-50">
+          <div class="container col-md-6 p-4">
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
+              class="col-md-12 mx-auto brand-name p-3 custom-text text-center text-primary fs-1 border-bottom border-2 border-secondary"
             >
               Welcome to Vintage Brokers, your exclusive gateway to the world of
               refined luxury.
@@ -96,7 +91,7 @@
               style.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
+              class="col-md-12 mx-auto p-1 text-start text-primary fs-1 border-bottom border-2 border-secondary"
             >
               Elegance Unveiled
             </h2>
@@ -109,7 +104,7 @@
               treasures that encapsulate the essence of a bygone era.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
+              class="col-md-12 mx-auto p-1 text-start text-primary fs-1 border-bottom border-2 border-secondary"
             >
               An Odyssey Through Time
             </h2>
@@ -122,7 +117,7 @@
               the fabric of history.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-center text-primary fs-1 border-bottom border-4 border-secondary"
+              class="col-md-12 mx-auto p-1 text-start text-primary fs-1 border-bottom border-2 border-secondary"
             >
               Timeless Allure
             </h2>
@@ -135,7 +130,7 @@
               statement of refined taste.
             </p>
             <h2
-              class="col-md-10 mx-auto mb-1 text-primary fs-1 border-bottom border-4 border-secondary"
+              class="col-md-12 mx-auto p-1 text-start text-primary fs-1 border-bottom border-2 border-secondary"
             >
               Bid with Distinction
             </h2>
