--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link text-secondary" id="loginAnchor" href="">Login</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-secondary " href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-secondary" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
