--- a/register.html
+++ b/register.html
@@ -52,6 +52,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link text-secondary" href="/index.html">Login</a>
+            </li>
+            <li class="nav-item">
               <a
                 class="nav-link text-secondary text-decoration-underline active"
                 href="/register.html"
@@ -64,14 +67,6 @@
             <li class="nav-item">
               <a class="nav-link text-secondary" href="/contact.html"
                 >Contact</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                id="logoutButton"
-                class="nav-link text-secondary"
-                href="/index.html"
-                >Login</a
               >
             </li>
           </ul>
