--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,13 @@
               >
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link text-secondary"
+                href="/index.html"
+                >Login</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html"
                 >Register</a
               >
@@ -65,19 +72,16 @@
             <li class="nav-item">
               <a class="nav-link text-secondary text-decoration-underline active" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-              <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Login</a>
-            </li>
           </ul>
         </div>
       </div>
     </header>
     <main>
       <div class="container-fluid text-center">
-        <div class="contact-bg">
-          <div class="container col-md-6 bg-success bg-opacity-75 p-4 text-primary align-items-center">
+        <div class="contact-bg  bg-success bg-opacity-10 ">
+          <div class="container col-md-6 p-1 text-primary align-items-center">
             <h1 class="text-center fs-1 border-bottom border-4 border-secondary mt-5 ">Contact</h1>
-            <p class="fs-4"> Customer Support</p>
+            <p class="fs-4 mt-4"> Customer Support</p>
             <div class="col-md-4 d-flex flex-row gap-2 align-items-center">
                 <p class="fs-3">Phone</p>
                 <i class="fa fa-phone text-secondary fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
@@ -91,7 +95,7 @@
           </div>
         </div>
     </main>
-    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
+    <footer class="container-fluid bg-success bg-opacity-25">
       <div class="row align-items-center">
         <div class="col-md-6">
           <nav class="navbar navbar-expand-lg">
@@ -122,11 +126,5 @@
         <p class="text-center mt-1">Vintage$Brokers 2023</p>
       </div>
     </footer>
-    <button
-    class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
-    id="back-to-up"
-  >
-    <i class="fa fa-arrow-up" aria-hidden="true"></i>
-  </button>
   </body>
 </html>
