--- a/contact.html
+++ b/contact.html
@@ -79,18 +79,18 @@
     <main>
       <div class="container-fluid text-center">
         <div class="contact-bg  bg-success bg-opacity-10 ">
-          <div class="container col-md-6 p-1 text-primary align-items-center">
+          <div class="container  p-1 text-primary align-items-center">
             <h1 class="text-center fs-1 border-bottom border-4 border-secondary mt-5 ">Contact</h1>
             <p class="fs-4 mt-4"> Customer Support</p>
-            <div class="col-md-4 d-flex flex-row gap-2 align-items-center">
+            <div class=" d-flex gap-2 align-items-center">
                 <p class="fs-3">Phone</p>
                 <i class="fa fa-phone text-secondary fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
-                <p class="fs-3 col-md-10 ms-2">+47 815 412 00</p>
+                <p class="fs-3  ms-2">+47 815 412 00</p>
             </div>
-            <div class="col-md-4 d-flex flex-row gap-2 align-items-center">
+            <div class=" d-flex  align-items-center">
                 <p class="fs-3 ">Email</p>
                 <i class="fa-solid fa-envelope text-secondary  fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
-                <p class="fs-3 col-md-10 ms-5">VintageBrokers@support.com</p>
+                <p class="fs-3 ms-5 text-break">VintageBrokers@support.com</p>
             </div>
           </div>
         </div>
