--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <div class="about-bg bg-success bg-opacity-50">
           <div class="container col-md-6 p-4">
             <h2
-              class="col-md-12 mx-auto brand-name p-3 custom-text text-center text-primary fs-1 border-bottom border-2 border-secondary"
+              class="col-md-12 mx-auto p-3 custom-text text-start text-md-center text-primary fs-1 border-bottom border-2 border-secondary"
             >
               Welcome to Vintage Brokers, your exclusive gateway to the world of
               refined luxury.
