--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -50,7 +50,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto me-1-sm float-end fs-5" id="profileNavText">
+            <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
               <li class="nav-item">
                 <a
                   class="nav-link text-secondary"
@@ -58,11 +58,11 @@
                   >Profile</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-secondary" href="/feed/auctions.html">Auctions</a>
+              <li class="nav-item" id="profileNavText">
+                <a class="nav-link text-secondary text-decoration-underline fw-bold active" href="/feed/listings.html">Auctions</a>
               </li>
-              <li class="nav-item">
-                <a id="logoutButton" class="nav-link text-secondary" href="index.html">Logout</a>
+              <li class="nav-item ">
+                <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Logout</a>
               </li>
             </ul>
           </div>
@@ -77,7 +77,9 @@
           </div>
         </div>
         <div class="masthead-auction">
-        <div class="auctionBox">
+        <div class="auctionBox d-flex align-items-center">
+            </div>
+          </div>
         </div>
         <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal" tabindex="-1" aria-labelledby="createAuctionModal" aria-hidden="true">
           <div class="modal-dialog ">
