meta title, keywords, and desc

--- a/register.html
+++ b/register.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Mikael Even Selstad" />
-    <meta name="title" content="" />
-    <meta name="description" content=" " />
-    <meta name="keywords" content="" />
+    <meta
+      name="title"
+      content="Vintage Brokers - Your Gateway to Refined Luxury"
+    />
+    <meta
+      name="description"
+      content="Explore a curated collection of opulent watches, fashion, and furniture at Vintage Brokers. Step into a world of timeless elegance, where each piece embodies craftsmanship, history, and enduring style."
+    />
+    <meta
+      name="keywords"
+      content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance"
+    />
     <title>Vintag$Brokers | Register</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
