form validation fix

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row h-100 justify-content-center align-items-center">
             <div class="col-lg-4 col-md-6 col-sm-8">
                 <h3 class="text-primary fs-2">Please log in</h3>
-                <form id="loginForm" method="post" class="needs-validation mb-3">
+                <form id="loginForm" method="post" class="needs-validation was-validated mb-3">
                   <div class="form-floating mb-3">
                     <input
                       type="text"
@@ -124,7 +124,7 @@
                     />
                     <label for="userEmail">Email</label>
                     <div class="invalid-feedback text-danger">
-                      Please enter a valid email address.
+                      Please enter a registered email address.
                     </div>
                   </div>
                   <div class="form-floating">
