form validation fix

--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
                   required
                 />
                 <div class="invalid-feedback" id="userNameFeedback">
-                  Please enter a username.
+                  Username Already Taken.
                 </div>
               </div>
               <div class="mb-3 fs-4">
