--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="col-lg-4 col-md-6 col-sm-8">
                 <h3 class="text-primary fs-2">Please log in</h3>
                 <form id="loginForm" method="post" class="needs-validation mb-3">
-                  <div class="form-floating mb-3 fs-4">
+                  <div class="form-floating mb-3 fw-bold fs-6">
                     <input
                       type="text"
                       class="form-control"
@@ -124,7 +124,7 @@
                       Please enter a registered email address.
                     </div>
                   </div>
-                  <div class="form-floating fs-4">
+                  <div class="form-floating fw-bold fs-6">
                     <input
                       type="password"
                       class="form-control"
