fixed a small margin on logo text

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             width="100"
             class="rounded-circle p-1"
           />
-          <span class="d-sm-inline d-none">Vintage$Brokers</span></a
+          <span class="d-sm-inline d-none ms-2">Vintage$Brokers</span></a
         >
         <button
           class="navbar-toggler"
