--- a/register.html
+++ b/register.html
@@ -42,7 +42,7 @@
             width="100"
             class="rounded-circle p-1"
           />
-          <span class="d-sm-inline d-none">Vintage$Brokers</span></a
+          <span class="d-sm-inline d-none ms-2">Vintage$Brokers</span></a
         >
         <button
           class="navbar-toggler"
