--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -234,13 +234,14 @@
           </div>
           <p class="text-center mt-1">Vintage$Brokers 2023</p>
         </div>
-      </footer>
-    <button
-    class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
-    id="back-to-up"
-  >
-    <i class="fa fa-arrow-up" aria-hidden="true"></i>
-  </button>
+    </footer>
+        <button
+        class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+        id="back-to-up"
+        aria-label="Scroll to top"
+      >
+        <i class="fa fa-arrow-up" aria-hidden="true"></i>
+      </button>
   </body>
   </html>
 
