--- a/profile/index.html
+++ b/profile/index.html
@@ -374,6 +374,7 @@
   <button
   class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
   id="back-to-up"
+  aria-label="Scroll to top"
 >
   <i class="fa fa-arrow-up" aria-hidden="true"></i>
 </button>
